[gd_scene load_steps=19 format=2]

[ext_resource path="res://actors/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://textures/temp/photos_2022_5_17_fst_pavement-moss.jpg" type="Texture" id=2]
[ext_resource path="res://textures/temp/photos_2022_5_17_fst_gravel-pebbles.jpg" type="Texture" id=3]
[ext_resource path="res://textures/temp/photos_2022_5_17_fst_old-wall-brick.jpg" type="Texture" id=4]
[ext_resource path="res://UI/GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://textures/temp/photos_2022_3_19_fst_black-plank-wall.jpg" type="Texture" id=6]
[ext_resource path="res://maps/testing.gd" type="Script" id=7]
[ext_resource path="res://textures/temp/photos_2022_2_6_fst_dark-old-wood.jpg" type="Texture" id=8]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 3 )
uv1_triplanar = true

[sub_resource type="Environment" id=4]
ambient_light_color = Color( 0.219608, 0.196078, 0.0705882, 1 )
ambient_light_energy = 0.25
fog_enabled = true
fog_color = Color( 0.501961, 0.6, 0.701961, 1 )
fog_depth_begin = 5.0

[sub_resource type="BoxShape" id=5]
extents = Vector3( 7.07819, 4.5, 1 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 220, 1, 280 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 2.09303, 1.09909, 1.6553 )

[sub_resource type="SpatialMaterial" id=9]
albedo_texture = ExtResource( 6 )

[sub_resource type="BoxShape" id=8]

[sub_resource type="SpatialMaterial" id=10]
albedo_texture = ExtResource( 8 )

[node name="world" type="Spatial"]
script = ExtResource( 7 )

[node name="CSGCombiner" type="CSGCombiner" parent="."]
use_collision = true
collision_mask = 0

[node name="CSGBox" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
width = 30.0
height = 1.0
depth = 30.0
material = SubResource( 1 )

[node name="CSGBox2" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 1, 7.5 )
width = 3.0
depth = 3.0
material = SubResource( 2 )

[node name="CSGPolygon" type="CSGPolygon" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 0, 1.5 )
polygon = PoolVector2Array( 0, 0, 0, 5.5, 12.5, 0, 8, 0 )
depth = 3.0
material = SubResource( 3 )

[node name="player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.0447, -0.00347805, 7.81774 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.866025, 0.12941, -0.482963, 0, 0.965926, 0.258819, 0.5, -0.224144, 0.836516, -30, 17.5, 37 )
light_color = Color( 0.254902, 0.254902, 0.254902, 1 )
shadow_enabled = true

[node name="soundtrigger" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 1, 0 )
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="soundtrigger"]
shape = SubResource( 5 )

[node name="soundtriggerplayer" type="AudioStreamPlayer3D" parent="soundtrigger"]

[node name="death" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -23.5, 0 )

[node name="CollisionShape" type="CollisionShape" parent="death"]
shape = SubResource( 6 )

[node name="hurt" type="CSGPolygon" parent="."]
transform = Transform( -0.5, -0.866025, 0, 0.866025, -0.5, 0, 0, 0, 1, 0, -0.5, -13 )
polygon = PoolVector2Array( 0, 0, 0, 1, 1.5, 1, 1, 0 )

[node name="hurtArea" type="Area" parent="hurt"]

[node name="hurtCollisionShape" type="CollisionShape" parent="hurt/hurtArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.842537 )
shape = SubResource( 7 )

[node name="GUI" parent="." instance=ExtResource( 5 )]

[node name="button" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5, 0.75, 11.75 )
material_override = SubResource( 9 )
use_collision = true
collision_mask = 0

[node name="Area" type="Area" parent="button"]

[node name="CollisionShape" type="CollisionShape" parent="button/Area"]
shape = SubResource( 8 )

[node name="bridge" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30.25, -1, 0 )
material_override = SubResource( 10 )
use_collision = true
collision_mask = 0
width = 30.5
depth = 9.5

[connection signal="area_entered" from="soundtrigger" to="." method="_on_soundtrigger_area_entered"]
[connection signal="area_entered" from="death" to="." method="_on_death_area_entered"]
[connection signal="area_entered" from="hurt/hurtArea" to="." method="_on_hurtArea_area_entered"]
[connection signal="area_entered" from="button/Area" to="." method="_on_Area_area_entered"]
